--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:  
 jobs:
 
-  build:
+  CreateInfrastructure:
 
     runs-on: ubuntu-latest
 
@@ -41,4 +41,6 @@ jobs:
         terraform apply -auto-approve
 
     - name: Wait for EC2 init checks to complete
-      run: sleep 300 
+      run: sleep 300
+  call-workflow-1-in-local-repo:
+    uses: ld-singh/demo-app-hello-world/.github/workflows/docker-image.yml@v1
