--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,4 +43,11 @@ jobs:
     - name: Wait for EC2 init checks to complete
       run: sleep 300
   call-workflow-1-in-local-repo:
-    uses: ld-singh/demo-app-hello-world/.github/workflows/docker-image.yml@v1
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          curl -X POST \
+          -H "Authorization: Bearer ${{secrets.GIT_TOKEN}}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/ld-singh/demo-app-hello-world/actions/workflows/docker-image.yml/dispatches \
+          -d '{"ref": "main"}'
