--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,8 +47,10 @@ jobs:
       run: sleep 300
     - name: Deploy docker image
       run: |
-          curl -X POST \
-          -H "Authorization: Bearer ${{secrets.GIT_TOKEN}}" \
-          -H "Accept: application/vnd.github.v3+json" \
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer \${{ secrets.GIT_TOKEN }}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/ld-singh/demo-app-hello-world/actions/workflows/docker-image.yml/dispatches \
           -d '{"ref": "main"}'
