--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,5 +47,11 @@ jobs:
       run: sleep 300
     - name: Deploy docker image
       run: |
-          curl -XPOST -u "${{ secrets.GIT_TOKEN }}" -H "Accept:application/vnd.github" -H "Content-Type:application/json" https://api.github.com/repos/ld-singh/demo-app-hello-world/actions/workflows/docker-image.yml/dispatches --data '{"ref": "main" }'
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GIT_TOKEN }}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/ld-singh/demo-app-hello-world/actions/workflows/docker-image.yml/dispatches \
+          --data '{"ref": "main" }'
 
