--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,8 +50,8 @@ jobs:
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GIT_TOKEN }}"\
+          -H "Authorization: Bearer ${{ secrets.GIT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/ld-singh/demo-app-hello-world/actions/workflows/docker-image.yml/dispatches \
-          --data '{"ref": "main" }'
+          -d '{"ref":"main"}'
 
