--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,10 @@
 name: Build Webserver Infrastructure with Terraform
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #push:
+  #  branches: [ "main" ]
+  # pull_request:
+  #  branches: [ "main" ]
   workflow_dispatch:  
 jobs:
 
